2009-02-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/StatisticsPage.cs:
	Patch from Alexander Kojevnikov making it so that even if the statistics
	TreeView is focused you can still use ctrl-pageup/down to switch tabs in
	the track editor (BGO #565438)

2009-02-27  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Core/Banshee.Core/Banshee.Base/Tests/TaglibReadWriteTests.cs:
	Initialize the AddinManager before running tests. Original patch by
	John Millikin (BGO #568046).

	* tests/data/test.mp3: Add a sample mp3 file required by the taglib-sharp
	tests.

	* tests/Makefile.am: Run nunit-console2 with -noshadow so that tests
	can find the sample mp3 file.

2009-02-26  Eoin Hennessy <eoin@randomrules.org>

	* src/Libraries/Mono.Media/Media.Playlists.Xspf/Playlist.cs: The current
	path is not gauranteed to be a valid Uri (especially when running from a
	bundle on OSX). If creating the default base Uri from the current path
	fails, set it to Location.

2009-02-26  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/IListView.cs:  Patch from
	Alexander Kojevnikov moving the focus to the list of songs when
	jumping (Ctrl-J) to the currently playing song (BGO #558940)

2009-02-26  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Query/ExactStringQueryValue.cs:
	* src/Libraries/Hyena/Hyena.Query/StringQueryValue.cs: Patch from Andrés
	G. Aragoneses and John Millikin fixing the wildcard escaping
	ExactStringQueryValues in LIKE queries (BGO #570312)

	* src/Libraries/Hyena/Hyena.Query/Tests/QueryTests.cs: New tests Andrés
	testing the behavior for Exact and non LIKE queries.

2009-02-26  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Libraries/Hyena/Hyena.Query/AliasedObjectSet.cs: Move the ToLower
	call added in my previous commit outside of the loop. Let's not waste
	CPU cycles.
